--- a/scss/sprites.scss
+++ b/scss/sprites.scss
@@ -3,6 +3,13 @@
 /* icons */
 
  $icons-bullet-spacing:30px;
+ $icons-money-spacing:50px;
+ $icons-calendar-spacing:50px;
+ $icons-marker-spacing:50px;
+ $icons-gear-spacing:50px;
+ $icons-star-spacing:50px;
+ $icons-plus-spacing:50px;
+
 // $icons-link_arrows-right-position: 100%;
 // $icons-link_arrows-left-spacing:7px;
 // $icons-link_arrows-right-spacing:7px;
