--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,9 +58,12 @@ h4 { font-size: 11px; font-weight:bold; }
 
 .content { width:980px; margin: auto; }
 
+
+$navHeight: 80px; 
+
 /* Navigation */
 nav {
-    height: 80px;
+    height: $navHeight;
     background:url(../img/backgrounds/bkg_navigation.png) repeat-x;
 
     h1 { position:relative; top: 10px; float:left; }
@@ -206,6 +209,7 @@ nav {
 .box.green { position:absolute;  top: 300px; left: 500px; }
 .box.blue { position:absolute;   top: 300px; left: 900px; }
 
+/* NAVIGATION */
 nav ul li {
     position:relative;
 
@@ -218,8 +222,8 @@ nav ul li {
 nav ul li .filter {
 
     $width: 236px;
-    $leftPadding: 25px;
-    $rightPadding: 25px;
+    $pL: 25px;
+    $pR: 25px;
 
     display:none;
     position:absolute;
@@ -229,9 +233,9 @@ nav ul li .filter {
     z-index:100;
 
     .content {
-        width:$width - $leftPadding - $rightPadding;
+        width:$width - $pL - $pR;
         background:url(../img/backgrounds/bkg_filter.png) repeat-y -242px bottom;
-        padding: 13px $rightPadding 7px $leftPadding;
+        padding: 13px $pR 7px $pL;
     }
 
     div.t { position:absolute; top: -55px; left: 0; width:$width; height: 55px; background:url(../img/backgrounds/bkg_filter.png) no-repeat left top; }
@@ -239,16 +243,16 @@ nav ul li .filter {
 
     &.view {
         $width: 220px;
-        $leftPadding: 0;
-        $rightPadding: 0;
+        $pL: 0;
+        $pR: 0;
 
         width:$width;
 
         div.content {
-            width: $width - $leftPadding - $rightPadding;
+            width: $width - $pL - $pR;
             background:url(../img/backgrounds/bkg_view_filter.png) repeat-y -222px bottom;
             padding:0;
-            padding: 13px $rightPadding 7px $leftPadding;
+            padding: 13px $pR 7px $pL;
         }
 
         div.t { top: -55px; width:$width; height: 55px; background:url(../img/backgrounds/bkg_view_filter.png) no-repeat left top; }
@@ -257,16 +261,16 @@ nav ul li .filter {
 
     &.big {
         $width: 316px;
-        $leftPadding: 0;
-        $rightPadding: 0;
+        $pL: 0;
+        $pR: 0;
 
         width:$width;
 
         div.content {
-            width: $width - $leftPadding - $rightPadding;
+            width: $width - $pL - $pR;
             background:url(../img/backgrounds/bkg_big_filter.png) repeat-y -322px bottom;
             padding:0;
-            padding: 13px $rightPadding 7px $leftPadding;
+            padding: 13px $pR 7px $pL;
         }
 
         div.t { top: -55px; width:$width; height: 55px; background:url(../img/backgrounds/bkg_big_filter.png) no-repeat left top; }
@@ -460,3 +464,59 @@ nav ul li .filter {
 
     } // content
 } // filter
+
+/* ASIDE */
+aside {
+    $width: 358px;
+    $pT: 31px;
+    $pB: 27px;
+    $pR: 24px;
+    $pL: 33px;
+
+    position:absolute;
+    top: $navHeight; right: 0;
+    background:#fff;
+    width: $width;
+    height:100%;
+    background: transparent url(../img/backgrounds/bkg_paper.png) left top repeat-y;
+    z-index:100;
+
+    .content {
+        background:#fff;
+        height:100%;
+        width:$width - $pL - $pR;
+        padding: $pT $pR $pB $pL;
+        margin-left:10px;
+
+        h4 { margin: 0 0 5px 0; text-transform: uppercase; color:$light_gray; }
+
+        ul {
+            width: 283px;
+            li {
+                padding: 19px 0 19px 30px;
+                font-size:15px;
+                color:$dark_gray;
+                border-bottom: 1px solid #E5E5E5;
+                &.money { @include icons-sprite(money, $offset-y:28px); }
+                &.calendar { @include icons-sprite(calendar, $offset-y:28px); }
+                &.marker { @include icons-sprite(marker, $offset-y:28px); }
+                &.gear { @include icons-sprite(gear, $offset-y:28px); }
+                &.plus { @include icons-sprite(plus, $offset-y:28px); }
+                &.star { @include icons-sprite(star, $offset-y:28px); }
+                &:last-child { border:none; }
+            }
+        }
+
+        .header {
+            hgroup { // header titles
+                width: 283px;
+
+                h2 { padding: 0 0 30px 0; font-family: 'News Cycle', sans-serif; color:$dark_gray; border-bottom: 2px solid $light_blue; line-height:22px;}
+                h2.no_border { border:none; padding: 0; }
+                h4 { margin: 0 0 6px 0; color:$blue; opacity:.6; text-transform:uppercase; }
+            }
+
+        } // header
+    }
+    a.close { display:block; position:absolute; top: 47px; left: -10px; @include icons-sprite(close_big); z-index:1000; width:32px; height:32px; }
+}
