--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,8 +65,11 @@ $navHeight: 80px;
 nav {
     height: $navHeight;
     background:url(../img/backgrounds/bkg_navigation.png) repeat-x;
+    position:relative;
 
     h1 { position:relative; top: 10px; float:left; }
+
+    .shadow { position:absolute; left:0; bottom: -12px; background:url(../img/backgrounds/bkg_navigation_shadow.png) repeat-x; width:100%; height:12px; z-index:10;}
 
     ul { // Main menu
         position:relative;
@@ -76,7 +79,6 @@ nav {
         li {
             display:inline;
             margin-left: 26px;
-
 
             a { 
                 &.selected { @include icons-sprite(arrows, $offset-y:-45px, $offset-x:100%); }
@@ -479,7 +481,7 @@ aside {
     width: $width;
     height:100%;
     background: transparent url(../img/backgrounds/bkg_paper.png) left top repeat-y;
-    z-index:100;
+    z-index:9;
 
     .content {
         background:#fff;
